test/fail/basic_syntax/bad_typecast.lly
#[
SyntaxError: Cannot cast type 'Integer' to type 'String'.
    from bad_typecast.lly:6:
]#

10.@(String)
